Add file endpoits with MongoDB
